# paper-review-toolkit

./: .gitignore  README.md  pyproject.toml
.claude/skills/paper-gaps/: SKILL.md
.claude/skills/paper-review/: SKILL.md
.claude/skills/policy-review-sim/: SKILL.md
brand-assets/reticle/: README.md  reticle_mark_3q_color_animated.apng  reticle_mark_3q_mono_bone_animated.apng  reticle_mark_topLean_color_email.apng
src/paper_review_toolkit/: __init__.py  llm.py
src/paper_review_toolkit/engines/: __init__.py  engine.py  rubric.py  types.py
src/paper_review_toolkit/parsers/: __init__.py
src/paper_review_toolkit/skills/: __init__.py  paper_gaps.py  paper_review.py  policy_review_sim.py
tests/: __init__.py  conftest.py  test_engine.py  test_rubric.py  test_types.py
